gdk/quartz/GdkQuartzNSWindow.c
@@ -358,9 +358,13 @@
   return YES;
 }
 
--(BOOL)isInManualResize
+/* Used by gdkevents-quartz.c to decide if our sendEvent() handler above
+ * will see the event or if it will be subjected to standard processing
+ * by GDK.
+*/
+-(BOOL)isInManualResizeOrMove
 {
-  return inManualResize;
+  return inManualResize || inManualMove;
 }
 
 -(void)beginManualMove
